# native-hotkeys

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  concept.cpp  hotkeys.ini  main.cpp
lib/: Error.h  INIReader.h
src/: main.rs
